fixed weird gap

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,7 +31,7 @@ td, th {
 }
 .container {
   width:500px; 
-  height:500px;
+  height:510px;
 }
 
 .brand-logo:hover {
@@ -122,6 +122,10 @@ i#search-button:hover {
 
 #lyric-box{
   background-image: url("../images/ricepaper_v3_@2X.png");
+  height: 520px;
+  border-right: 2px ridge;
+  border-left: 2px ridge;
+  border-color: #d59563;
 }
 
 #wrapper-init {
@@ -191,8 +195,8 @@ box-shadow:5px 5px 20px 5px #111 inset;
 */
 
 @keyframes slider {
-  0% {margin-top:-510px;}
-  100% {margin-top:0px;}
+  0% {margin-top:-520px;}
+  100% {margin-top:50px;}
 }
 
 /*      @keyframes shadowfade {
@@ -202,8 +206,8 @@ box-shadow:5px 5px 20px 5px #111 inset;
 */
 
 @keyframes sliderRev {
-  100% {margin-top:-510px;}
-  0% {margin-top:0px;}
+  100% {margin-top:-520px;}
+  0% {margin-top:50px;}
 }
 
 /*      @keyframes shadowfadeRev {
